--- a/public/css/simplesimon.css
+++ b/public/css/simplesimon.css
@@ -1,37 +1,69 @@
+body {
+    background-color: #e3e8ea;
+}
+
+.container {
+    font-family: "Euphoria Script", cursive, serif;
+    position: relative;
+    z-index: 1;
+}
+
+.container::before {
+    content: "";
+    background: url(/img/stainedColumns.jpg) no-repeat center;
+    height: 900px;
+    width: 100%;
+    opacity: 0.7;
+    top: 0;
+    left: 0;
+    position: absolute;
+    z-index: -1;
+}
+
+.space {
+    margin-top: 65px;
+}
+
 #yellow {
-    background-color: yellow;
-    border: 1px solid black;
-    height: 100px;
-    width: 100px;
+    background-color: #b75a0f;
+    border-radius: 66px 66px 5px 66px;
 }
 
 #red {
-    background-color: red;
-    border: 1px solid black;
-    height: 100px;
-    width: 100px;
+    background-color: #860000;
+    border-radius: 66px 5px 66px 66px;
 }
 
 #blue {
-    background-color: blue;
-    border: 1px solid black;
-    height: 100px;
-    width: 100px;
+    background-color: #216ac7;
+    border-radius: 66px 66px 66px 5px;
 }
 
 #green {
-    background-color: green;
-    border: 1px solid black;
-    height: 100px;
-    width: 100px;
+    background-color: #5ca244;
+    border-radius: 5px 66px 66px 66px;
 }
 
 .box {
     display: inline-block;
-    float: left;
-    margin-top: 50px;
+    height: 150px;
+    width: 150px;
+    border: 5px solid black;
+}
+
+.center {
+    text-align: center;
+    margin-left: 0;
 }
 
 .btn-div {
     margin-top: 100px;
+}
+
+button {
+    border: 4px solid black;
+    font-size: 32px;
+    padding: 10px;
+    background-color: #e3e8ea;
+
 }
