--- a/public/css/simplesimon.css
+++ b/public/css/simplesimon.css
@@ -1,11 +1,17 @@
 body {
-    background-color: #e3e8ea;
+    background-color: #c0c7c6;
+}
+
+p {
+    font-size: 3em;
+    font-weight: bold;
 }
 
 .container {
     font-family: "Euphoria Script", cursive, serif;
     position: relative;
     z-index: 1;
+    text-shadow: 2px 2px 4px #9aa1a2;
 }
 
 .container::before {
@@ -13,7 +19,7 @@ body {
     background: url(/img/stainedColumns.jpg) no-repeat center;
     height: 900px;
     width: 100%;
-    opacity: 0.7;
+    opacity: 0.8;
     top: 0;
     left: 0;
     position: absolute;
@@ -21,27 +27,31 @@ body {
 }
 
 .space {
-    margin-top: 65px;
+    margin-top: 45px;
 }
 
 #yellow {
     background-color: #b75a0f;
     border-radius: 66px 66px 5px 66px;
+    box-shadow: 2px 2px 4px #9aa1a2;
 }
 
 #red {
     background-color: #860000;
     border-radius: 66px 5px 66px 66px;
+    box-shadow: 2px 2px 4px #9aa1a2;
 }
 
 #blue {
     background-color: #216ac7;
     border-radius: 66px 66px 66px 5px;
+    box-shadow: 2px 2px 4px #9aa1a2;
 }
 
 #green {
     background-color: #5ca244;
     border-radius: 5px 66px 66px 66px;
+    box-shadow: 2px 2px 4px #9aa1a2;
 }
 
 .box {
@@ -57,13 +67,21 @@ body {
 }
 
 .btn-div {
-    margin-top: 100px;
+    margin-top: 80px;
 }
 
 button {
     border: 4px solid black;
     font-size: 32px;
     padding: 10px;
-    background-color: #e3e8ea;
-
+    background-color: #c1cacb;
+    border-radius: 6px;
+    text-shadow: 2px 2px 4px #9aa1a2;
+    box-shadow: 2px 2px 4px #9aa1a2;
 }
+
+.status, .status2 {
+    text-align: right;
+    font-size: 2.3em;
+}
+
